added embed icon i hope
i hopen

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <link rel="icon" href="favicon.png" type="image/x-icon" />
     <title>AzyMyt web-shite</title>
     <meta property="og:title" content="AzyMyt Demon Stats" />
+    <meta property="og:image" content="favicon.png"
     <meta
         property="og:description"
         content="Experimental garbanzo for gd at the minute"
