--- a/tracker.html
+++ b/tracker.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="favicon.png" type="image/x-icon">
     <title>AzyMyt Demonlist</title>
     <meta property="og:title" content="AzyMyt Demon Stats" />
-    <meta property="og:image" content="favicon.png"
+    <meta property="og:image" content="favicon.png"/>
     <meta
         property="og:description"
         content="Experimental garbanzo for gd at the minute"
