Visual overhaul and some rewritten stuff
HUGE updata

--- a/tracker.html
+++ b/tracker.html
@@ -19,4 +19,6 @@
     <p>and more later...</p>
     <img src="image.png" width="1480px">
     <br>
+    <a href="https://docs.google.com/spreadsheets/d/1dIL3JjvLz9QGQPUxDUlIIZmjR2kRAXtgMel7Fyil-j4/edit?usp=sharing" target="_blank">Sheet version</a>
+    <br>
 </body>
