--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 </body>
 
 <style>
+    .body {
+        background-color: black;
+    }
     .button {
         background-color: red;
         width: 300px;
