update folder structure

--- a/demonlist/demonlist.html
+++ b/demonlist/demonlist.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <head>
     <title>AzyMyt Demonlist</title>
-    <link rel="icon" href="favicon.png" type="image/x-icon">
+    <link rel="icon" href="../images/favicon.png" type="image/x-icon">
     <meta property="og:title" content="AzyMyt Demon Stats" />
-    <meta property="og:image" content="favicon.png"/>
+    <meta property="og:image" content="../images/favicon.png"/>
     <meta property="og:type" content="website" />
     <meta
         property="og:description"
@@ -17,7 +17,7 @@
 <body>
     <h1>AzyMyt Demon List</h1>
     <p>and more later...</p>
-    <img src="image.png" width="1480px">
+    <img src="../images/image.png" width="1480px">
     <br>
     <a href="https://docs.google.com/spreadsheets/d/1dIL3JjvLz9QGQPUxDUlIIZmjR2kRAXtgMel7Fyil-j4/edit?usp=sharing" target="_blank">Sheet version</a>
     <br>
