--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <head>
     <title>AzyMyt web</title>
-    <link rel="icon" href="favicon.png" type="image/x-icon" />
+    <link rel="icon" href="images/favicon.png" type="image/x-icon" />
     <meta property="og:title" content="AzyMyt Web" />
-    <meta property="og:image" content="favicon.png" />
+    <meta property="og:image" content="images/favicon.png" />
     <meta property="og:type" content="website" />
     <meta property="og:description" content="Experimental personal website" />
     <link rel="stylesheet" href="style.css"></link>
@@ -30,40 +30,40 @@
     </div>
 
     <div class="contents">
-        <a href="demonlist.html">GD Demon List</a>
+        <a href="demonlist/demonlist.html">GD Demon List</a>
     </div>
 
-    <img class="milkshake" src="milkshake.jpg" Width="40%"/>
+    <img class="milkshake" src="images/milkshake.jpg" Width="40%"/>
     <div class="gdicon">
-        <img src="favicon.png" height="60px"/>
+        <img src="images/favicon.png" height="60px"/>
     </div>
     <div class="media">
         <a href="https://bsky.app/profile/did:plc:3y4qvukkxapfx7h7l5lju3di">
-            <img src="bluesky.png">
+            <img src="images/bluesky.png">
         </a>
         <a href="https://www.youtube.com/@AzyMyt">
-            <img src="youtube.png">
+            <img src="images/youtube.png">
         </a>
         <a href="https://github.com/AzyMyt">
-            <img src="github.png">
+            <img src="images/github.png">
         </a>
     </div>
 
     <div class="gaming">
         <a href="https://gdladder.com/profile/9637">
-            <img src="gddl.ico">
+            <img src="images/gddl.ico">
         </a>
         <a href="https://aredl.net/profile/user/azymyt">
-            <img src="aredl.png">
+            <img src="images/aredl.png">
         </a>
         <a href="https://gdbrowser.com/u/azymyt">
-            <img src="gdbrowser.webp">
+            <img src="images/gdbrowser.webp">
         </a>
         <a href="https://pointercrate.com/demonlist/statsviewer/?player=61903">
-            <img src="demonlist.jpg">
+            <img src="images/demonlist.jpg">
         </a>
         <a href="https://osu.ppy.sh/users/18913918">
-            <img src="osu.png">
+            <img src="images/osu.png">
         </a>
     </div>
 </body>
