--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 
     <div class="contents">
         <a href="demonlist/demonlist.html">GD Demon List</a>
+        <a href="spamCalc/index.html">Spam Delay Calculator</a>
     </div>
 
     <img class="milkshake" src="images/milkshake.jpg" Width="40%"/>
