page stuff like around the favicon idk
im stupid i cant explain it better okay, i gave it metadata

--- a/spamCalculator/index.html
+++ b/spamCalculator/index.html
@@ -2,6 +2,13 @@
 <head>
 	<script src="program.js"></script>
 	<link rel="stylesheet" href="style.css"></style>
+	
+    <title>Azy Spam Timing Machine</title>
+    <link rel="icon" href="images/favicon.png" type="image/x-icon" />
+    <meta property="og:title" content="Azy Spam Timer" />
+    <meta property="og:image" content="images/favicon.png" />
+    <meta property="og:type" content="website" />
+    <meta property="og:description" content="Experimental Geometry Dash Alt Spam Timing Helping Device Trademark (it isnt trademarked)" />	
 </head>
 
 <body>
@@ -40,3 +47,4 @@
 <br> <br> <br>
 <p style="color:#010101">perchance</p>
 </body>
+
