Fix link to Spam Delay Calculator
why did i think calc was short for calculator (it is but it didnt work

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <div class="contents">
         <a href="demonlist/demonlist.html">GD Demon List</a>
-        <a href="spamCalc/index.html">Spam Delay Calculator</a>
+        <a href="spamCalculator/index.html">Spam Delay Calculator</a>
     </div>
 
     <img class="milkshake" src="images/milkshake.jpg" Width="40%"/>
