Convert links to list items in index.html

--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
     </div>
 
     <div class="contents">
-        <a href="demonlist/demonlist.html">GD Demon List</a>
-        <a href="spamCalculator/index.html">Spam Delay Calculator</a>
+        <ol>
+        <li><a href="demonlist/demonlist.html">GD Demon List</a></li>
+        <li><a href="spamCalculator/index.html">Spam Delay Calculator</a></li>
+        </ol>
     </div>
 
     <img class="milkshake" src="images/milkshake.jpg" Width="40%"/>
