reformatted, major appearance change, background

--- a/index.html
+++ b/index.html
@@ -9,34 +9,36 @@
     <link rel="stylesheet" href="style.css"></link>
 </head>
 
+<div class="header">
+    <h1>AzyMyt Web</h1>
+</div>
+
 <body>
-    <div class="header">
-        <div class="title">
-            <h1>AzyMyt Web</h1>
-        </div>
+<div class="maindiv">
+<div class="sidepanel">
+    <ul>
+    <li><a href="demonlist/demonlist.html">GD Demon List</a></li>
+    <li><a href="spamCalculator/index.html">Spam Delay Calculator</a></li>
+    </ul>
+</div>
 
-        <div class="info">
-            <p>I need filler text so you can have some broad stuff about me for now</p>
+<div class="contentsplit">
+    <div class="info">
+        <p>I need filler text so you can have some broad stuff about me for now</p>
 
-            <p>Gay genderfluid furry or something like that</p>
-            <p>I do digital art sometimes and I use Linux (because it's more responsive, I'm not a nerd unfortunately)</p>
-            <p>Almost certainly have ADHD and autism</p>
-            <br>
-            <p>Formerly the best GD player in Northern Ireland.</p>
-            <p>Currently 3rd</p>
+        <p>Gay genderfluid furry or something like that</p>
+        <p>I do digital art sometimes and I use Linux (because it's more responsive, I'm not a nerd unfortunately)</p>
+        <p>Almost certainly have ADHD and autism</p>
+        <br>
+        <p>Formerly the best GD player in Northern Ireland.</p>
+        <p>Currently 3rd</p>
 
-            <p>🐈</p>
-        </div>
+        <p>🐈</p>
     </div>
+    <img class="milkshake" src="images/milkshake.jpg" Width="100%"/>
+</div>
 
-    <div class="contents">
-        <ul>
-        <li><a href="demonlist/demonlist.html">GD Demon List</a></li>
-        <li><a href="spamCalculator/index.html">Spam Delay Calculator</a></li>
-        </ul>
-    </div>
-
-    <img class="milkshake" src="images/milkshake.jpg" Width="40%"/>
+<div class="bottomextras">
     <div class="gdicon">
         <img src="images/favicon.png" height="60px"/>
     </div>
@@ -69,4 +71,5 @@
             <img src="images/osu.png">
         </a>
     </div>
+</div>
 </body>
