Grid implementation & styling changes re-commit
Re-commit because i uploaded files wrong whoops 
Renamed legacy to card, and modern to list (code names are the same)
grid view will be polished later, currently missing borders
fixed content alignment on list view, added some blur for readability

--- a/demonlist/demonlist.html
+++ b/demonlist/demonlist.html
@@ -24,14 +24,14 @@
 <div class="options">
     <div class="selections">
         <p>View</p>
-        <button class="btnToggle" id="legacy">Legacy</button>
-        <button class="btnToggle" id="modern">Modern</button>
+        <button class="btnToggle" id="legacy">Card</button>
+        <button class="btnToggle" id="modern">List</button>
         <button class="btnToggle" id="grid">Grid</button>
     </div>
     <div class="selections">
         <p>Type</p>
         <button class="btnToggleType" id="classics">Classics</button>
-        <button class="btnToggleType" id="platformers">Platformers</button>
+        <button class="btnToggleType" id="platformers">Platformers (BROKEN)</button>
     </div>
 </div>
 <br>
