Styling, grid list style improvement
minor change visually but huge things coming i think

--- a/demonlist/demonlist.html
+++ b/demonlist/demonlist.html
@@ -16,27 +16,31 @@
 
 <h1>AzyMyt Demon List</h1>
 <p>and more later...</p>
-<img src="../images/image.png" width="1200px">
+<img src="../images/image.png" width="60%" style="border-radius: 10px;">
 <br>
 <a href="https://docs.google.com/spreadsheets/d/1dIL3JjvLz9QGQPUxDUlIIZmjR2kRAXtgMel7Fyil-j4/edit?usp=sharing" target="_blank">Sheet version</a>
 <br>
 
-<div class="options">
-    <div class="selections">
-        <p>View</p>
-        <button class="btnToggle" id="legacy">Card</button>
-        <button class="btnToggle" id="modern">List</button>
-        <button class="btnToggle" id="grid">Grid</button>
-    </div>
-    <div class="selections">
-        <p>Type</p>
-        <button class="btnToggleType" id="classics">Classics</button>
-        <button class="btnToggleType" id="platformers">Platformers (BROKEN)</button>
-    </div>
-</div>
-<br>
 
 <body>
+    <div class="options">
+        <div class="selections">
+            <p>View</p>
+            <div class="selectionContainer">
+                <button class="btnToggle" id="legacy">Card</button>
+                <button class="btnToggle" id="modern">List</button>
+                <button class="btnToggle" id="grid">Grid</button>
+            </div>
+        </div>
+        <div class="selections">
+            <p>Type</p>
+            <div class="selectionContainer">
+                <button class="btnToggleType" id="classics">Classics</button>
+                <button class="btnToggleType" id="platformers">Platformers (BROKEN)</button>
+            </div>
+        </div>
+    </div>
+    <br>
     <div id="list">
 
     </div>
