--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
 
         <p>🐈</p>
     </div>
+    <div class="milkdiv">
     <img class="milkshake" src="images/milkshake.jpg" Width="100%"/>
+    <p>milkshake</p>
+    </div>
 </div>
 
 <div class="bottomextras">
